--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -17,10 +17,13 @@
   --color-green-800: #016538;
   --color-green-900: #0A5331;
   --color-green-950: #052E16;
+
+  --ui-fg: var(--ui-color-neutral-800);
 }
 
 .dark {
   --ui-bg: var(--ui-color-neutral-950);
+  --ui-fg: var(--ui-color-neutral-100);
   --ui-bg-muted: var(--ui-color-neutral-900);
   --ui-bg-elevated: var(--ui-color-neutral-900);
   --ui-bg-accented: var(--ui-color-neutral-800);
